unpackaged/main/default/objects/Auto_Pricing_Details__c/Auto_Pricing_Details__c.object-meta.xml
<CustomObject>
    <label>Auto Pricing Details</label>
    <nameField>
        <displayFormat>APD-{00000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Pricing Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>