unpackaged/main/default/objects/Auto_Pricing_Details__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Car Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>