unpackaged/main/default/objects/Auto_Pricing_Details__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>