unpackaged/main/default/objects/Auto_Pricing_Details__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>