unpackaged/main/default/objects/Auto_Pricing_Details__c/fields/Posting_Time__c.field-meta.xml
<CustomField>
    <fullName>Posting_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Posting Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>